src/components/Backlink/styles.module.css
.backlink {
  width: 100%;
  height: 100%;
  padding: 1rem 1rem 0 1rem;
  margin-top: var(--ifm-spacing-vertical);
  border-radius: var(--ifm-pagination-nav-border-radius);
  border: 1px solid var(--ifm-color-emphasis-300);
}

.backlinkTitle {
  padding: 0.5rem 0.5rem 0 0.5rem;
  font-size: 1rem;
  color: var(--ifm-color-emphasis-600);
}

.backlinkList {
  margin: 1rem auto;
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(
    auto-fill,
    minmax(300px, 1fr)
  );
}

.mentioner {
  margin: 0;
  padding: calc(var(--border-radius) / 4);
  padding-bottom: 0.5rem;
}

.backlinkItem {
  padding: 0.5rem;
  border-radius: var(--border-radius);
  transition: background-color 0.2s ease-in-out;
}

.backlinkItem:hover {
  background-color: var(--ifm-menu-color-background-active);
}

.backlinkItemLink:hover {
  text-decoration: none;
}

.backlinkItemText {
  font-size: 0.8rem;
  white-space: pre-wrap;
  color: var(--ifm-color-emphasis-400);
  margin: 0;
}

.highlight {
  color: var(--ifm-color-emphasis-900);
}

.noBacklink {
  font-size: 0.8rem;
  padding: 1rem 0.5rem 0 0.5rem;
  color: var(--ifm-color-emphasis-400);
}

